--- a/alumni.html
+++ b/alumni.html
@@ -124,26 +124,26 @@
                     <td>Chairman of the Board</td>
                   </tr>
                   <tr>
-                    <td>Alex</td>
-                    <td><image src="img/thafish.png" height=100 width=100> </img></td>
+                    <td>Makoto</td>
+                    <td><image src="img/makoto.png" height=100 width=100> </img></td>
                     <td>2014</td>
                     <td>Director of Collegiate Relations</td>
                   </tr>
                   <tr>
-                    <td>Andrew</td>
-                    <td><image src="img/andrew.jpg" height=100 width=100> </img></td>
+                    <td>Emily</td>
+                    <td><image src="img/emily.png" height=100 width=100> </img></td>
                     <td>2015</td>
                     <td>Director of Alumni Relations</td>
                   </tr>
                   <tr>
-                    <td>Dillon</td>
-                    <td><image src="img/dillon.jpg" height=100 width=100> </img></td>
+                    <td>Ella</td>
+                    <td><image src="img/ella.png" height=100 width=100> </img></td>
                     <td>2015</td>
                     <td>Director of Supply and Demand</td>
                   </tr>
                   <tr>
-                    <td>Zach</td>
-                    <td><image src="img/huid_profile_photo.jpg" height=100 width=100> </img></td>
+                    <td>Jacob</td>
+                    <td><image src="img/jacob.png" height=100 width=100> </img></td>
                     <td>2015</td>
                     <td>High Commissioner of Robotics</td>
                   </tr>
