--- a/robot.html
+++ b/robot.html
@@ -96,6 +96,7 @@
         <div class="bs-component">
           <div class="bs-component">
           <!-- <img src="/img/bot.JPG" style="max-width: 90%;"> -->
+          <!--
             <table class="table table-striped table-hover">
               <thead>
                 <tr>
@@ -137,37 +138,12 @@
                 </tr>
                 
               </tbody>
-            </table> 
+            </table> -->
 
           </div><!-- /example -->
         </div>
       </div>
-      <div class="col-lg-6">
-        <table class="table table-striped table-hover">
-        <thead><tr>
-          <td>Competition</td>
-          <td>Preliminary Seed</td>
-          <td>Awards</td>
-        </tr></thead>
-        <tbody>
-          <tr>
-            <td>Fall Harvest Qualifier in Marlton, NJ</td>
-            <td>2nd</td>
-            <td>Innovate Award, Finalist Alliance 1st Pick</td>
-          </tr>
-          <tr>
-            <td>Corning, NY Qualifier</td>
-            <td>1st</td>
-            <td>Innovate Award, Finalist Alliance Captain</td>
-          </tr>
-          <tr>
-            <td>John Dewey Qualifier in Brooklyn, NY</td>
-            <td>3rd</td>
-            <td>Inspire 2nd Place, PTC Design Award, Winning Alliance 1st Pick</td>
-          </tr>
-        </tbody>
-        </table>
-      </div>
+      
     </div>
 
     </div>
