--- a/robot.html
+++ b/robot.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="shortcut icon" href="at.ico">
     <meta charset="utf-8">
-    <title>Atomic Theory</title>
+    <title>Standard Model</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="css/bootswatch.min.css">
