--- a/team_2016.html
+++ b/team_2016.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="shortcut icon" href="at.ico">
     <meta charset="utf-8">
-    <title>Atomic Theory</title>
+    <title>Standard Model</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="/css/bootswatch.min.css">
@@ -48,7 +48,7 @@
   <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="/" class="navbar-brand">Atomic Theory</a>
+          <a href="/" class="navbar-brand">Standard Model</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
