added to team page

--- a/team.html
+++ b/team.html
@@ -116,39 +116,89 @@
                   </tr>
                 </thead>
                 <tbody>
-                 <tr>
-                    <td>Davis</td>
-                    <td><image src="img/davis.png" height=100 width=100> </img></td>
-                    <td>Senior</td>
-                    <td>Coding</td>
-                  </tr>
-
                   <tr>
-                    <td>Aryav</td>
-                    <td><image src="https://pbs.twimg.com/profile_images/738744285101580288/OUoCVEXG.jpg" height=100 width=100> </img></td>
-                    <td>Senior</td>
-                    <td>Building</td>
+                      <td>Leo</td>
+                      <td><image src="img/Leo.png" height=100 width=100> </img></td>
+                      <td>Senior</td>
+                      <td>Robots</td>
                   </tr>
-
                   <tr>
-                    <td>Julian</td>
-                    <td><image src="https://pbs.twimg.com/profile_images/738744285101580288/OUoCVEXG.jpg" height=100 width=100> </img></td>
-                    <td>Senior</td>
-                    <td>Luke Sauer</td>
+                      <td>Maisie</td>
+                      <td><image src="img/Maisie.png" height=100 width=100> </img></td>
+                      <td>Senior</td>
+                      <td>Robots</td>
                   </tr>
-
                   <tr>
-                    <td>Yung Gallant</td>
-                    <td><image src="https://pbs.twimg.com/profile_images/738744285101580288/OUoCVEXG.jpg" height=100 width=100> </img></td>
-                    <td>Senior</td>
-                    <td>Coding</td>
+                      <td>Alexander</td>
+                      <td><image src="img/Alexander.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
                   </tr>
-
                   <tr>
-                    <td>Caitlyn Yung</td>
-                    <td><image src="https://pbs.twimg.com/profile_images/738744285101580288/OUoCVEXG.jpg" height=100 width=100> </img></td>
-                    <td>Senior</td>
-                    <td>Coding</td>
+                      <td>Paul</td>
+                      <td><image src="img/Paul.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Eeshan</td>
+                      <td><image src="img/Eeshan.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Ryan</td>
+                      <td><image src="img/Ryan.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Spencer</td>
+                      <td><image src="img/Spencer.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Emily</td>
+                      <td><image src="img/Emily.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Alexandra</td>
+                      <td><image src="img/Alexandra.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Olivia</td>
+                      <td><image src="img/Olivia.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Md</td>
+                      <td><image src="img/Md.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Kaylen</td>
+                      <td><image src="img/Kaylen.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Ryan</td>
+                      <td><image src="img/Ryan.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
+                  </tr>
+                  <tr>
+                      <td>Brian</td>
+                      <td><image src="img/Brian.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
+                      <td>Robots</td>
                   </tr>
 
                   <tr>
