--- a/team.html
+++ b/team.html
@@ -116,87 +116,88 @@
                   </tr>
                 </thead>
                 <tbody>
+
                   <tr>
                       <td>Leo</td>
-                      <td><image src="img/Leo.png" height=100 width=100> </img></td>
-                      <td>Senior</td>
+                      <td><image src="img/leo.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Maisie</td>
-                      <td><image src="img/Maisie.png" height=100 width=100> </img></td>
-                      <td>Senior</td>
+                      <td><image src="img/maisie.png" height=100 width=100> </img></td>
+                      <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Alexander</td>
-                      <td><image src="img/Alexander.png" height=100 width=100> </img></td>
+                      <td><image src="img/alexander.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Paul</td>
-                      <td><image src="img/Paul.png" height=100 width=100> </img></td>
+                      <td><image src="img/paul.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Eeshan</td>
-                      <td><image src="img/Eeshan.png" height=100 width=100> </img></td>
+                      <td><image src="img/eeshan.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Ryan</td>
-                      <td><image src="img/Ryan.png" height=100 width=100> </img></td>
+                      <td><image src="img/ryan.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Spencer</td>
-                      <td><image src="img/Spencer.png" height=100 width=100> </img></td>
+                      <td><image src="img/spencer.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Emily</td>
-                      <td><image src="img/Emily.png" height=100 width=100> </img></td>
+                      <td><image src="img/emily.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Alexandra</td>
-                      <td><image src="img/Alexandra.png" height=100 width=100> </img></td>
+                      <td><image src="img/alexandra.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Olivia</td>
-                      <td><image src="img/Olivia.png" height=100 width=100> </img></td>
+                      <td><image src="img/olivia.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Md</td>
-                      <td><image src="img/Md.png" height=100 width=100> </img></td>
+                      <td><image src="img/md.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Kaylen</td>
-                      <td><image src="img/Kaylen.png" height=100 width=100> </img></td>
+                      <td><image src="img/kaylen.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Ryan</td>
-                      <td><image src="img/Ryan.png" height=100 width=100> </img></td>
+                      <td><image src="img/ryan.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Brian</td>
-                      <td><image src="img/Brian.png" height=100 width=100> </img></td>
+                      <td><image src="img/brian.png" height=100 width=100> </img></td>
                       <td>Grade</td>
                       <td>Robots</td>
                   </tr>
