--- a/team.html
+++ b/team.html
@@ -120,13 +120,13 @@
                   <tr>
                       <td>Leo</td>
                       <td><image src="img/leo.png" height=100 width=100> </img></td>
-                      <td>Grade</td>
+                      <td>Senior</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
                       <td>Maisie</td>
                       <td><image src="img/maisie.png" height=100 width=100> </img></td>
-                      <td>Grade</td>
+                      <td>Senior</td>
                       <td>Robots</td>
                   </tr>
                   <tr>
