fixed sizing of logo on front page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://www.youtube.com/watch?v=CXmp1hLK0tY&t=105
 
               <h1 style="font-size: 80px;">Team 9372</h1>
               
-              <img src="img/standard_logo.png" height="230" width="600">
+              <img style="width: 65%;" src="img/standard_logo.png">
               <p style="font-size: 30px;">Standard Model is an FTC Robotics team from the Dalton School in New York City.</p>
               <p><a class="btn btn-primary btn-lg" href="about.html">Learn more</a></p>
             </div>
